# XOperad

./: .gitignore  .travis.yml  Forest.hs  Main.hs  Matrix.hs  Numbers.hs  Operad.hs  README.md  Vector.hs  XOperad.cabal
.github/workflows/: haskell-ci.yml
Simple/: Main.hs
