cabal-version:      2.4
name:               XOperad
version:            0.1.1.0
synopsis:           The implementation of tic-tac-toe using an operadic comonad
description:        Please see README.md
homepage:           http://github.com/BartoszMilewski/XOperad
author:             Bartosz Milewski
category:           game
build-type:         Simple
extra-source-files: README.md
tested-with:        GHC ==8.10.4 || ==9.0.1

common common-options
  build-depends:
    , base         >=4.7   && <5
    , comonad      ^>=5.0.8
    , constraints  >=0.12

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -Wnoncanonical-monad-instances

  if impl(ghc >=8.2)
    ghc-options: -fhide-source-paths

  if impl(ghc >=8.4)
    ghc-options: -Wmissing-export-lists -Wpartial-fields

  if impl(ghc >=8.8)
    ghc-options: -Wmissing-deriving-strategies -fwrite-ide-info -hiedir=.hie

  if impl(ghc >=8.10)
    ghc-options: -Wunused-packages

  default-language: Haskell2010

library
  import:          common-options
  exposed-modules:
    Forest
    Matrix
    Numbers
    Operad
    Vector

executable tic-tac-toe
  import:        common-options
  main-is:       Main.hs
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N
  build-depends: XOperad

executable tic-tac-toe-simple
  import:         common-options
  hs-source-dirs: Simple
  main-is:        Main.hs
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N
  build-depends:  XOperad

source-repository head
  type:     git
  location: https://github.com/BartoszMilewski/XOperad
